[package]
name = "signals-slot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
egui = "0.33"
eframe = "0.33"
egui_plot = "0.34.0"
ndarray = "0.16.1"
env_logger = "0.11.7"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Egui Mobius dependencies
egui_mobius_template = { path = "../.." }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "signals-slot"
path = "src/main.rs"
